# Our-World-OASIS-API-HoloNET-HoloUnity-And-.NET-HDK

./: .gitignore  Archived - Shortcut.lnk  CONTRIBUTING.md  NextGenSoftware.OASIS.API.sln  OASIS API ReadMe.txt  OASIS API.sln  README.md  Start Apollo.bat  The OASIS - Docker.sln  The OASIS - STAR OAPP DNA Templates In Folder.sln  The OASIS.sln  index.html  package-lock.json  repos - Shortcut.lnk  starDNA.json
HOLONET/: NextGenSoftware.HoloNET.cs  NextGenSoftware.HoloNET.csproj
HOLOOASIS/: HOLOOASIS.cs  NextGenSoftware.OASIS.API.HoloOASIS.csproj
NextGenSoftware.CLI.Engine/: Animations.cs  CLIEngine.cs  CLIEngineException.cs  EventArgs.cs  NextGenSoftware.CLI.Engine.csproj  README.md  Spinner.cs
NextGenSoftware.EntityFrameworkCore.OASISAPI/: NextGenSoftware.EntityFrameworkCore.OASISAPI.csproj  OASISAPIDatabaseProviderServices.cs
NextGenSoftware.ErrorHandling/: ErrorHanding.cs  ErrorHandlingException.cs  EventArgs.cs  NextGenSoftware.ErrorHandling.csproj  README.md
NextGenSoftware.HoloNET.TestHarness/: NextGenSoftware.HoloNET.Client.TestHarness.csproj  Program.cs
NextGenSoftware.HoloNET2/: NextGenSoftware.HoloNET.cs  NextGenSoftware.HoloNET2.csproj
NextGenSoftware.Holochain.HDK.Core.CLI/: NextGenSoftware.Holochain.HDK.CLI.csproj  Program.cs
NextGenSoftware.Holochain.HoloNET - Copy/: EventArgs.cs  HoloNET.cs  HoloNETConfig.cs  HoloNETException.cs  NextGenSoftware.Holochain.HoloNET.csproj  ZomeParam.cs  ZomeParamStruct.cs  (+1 more)
NextGenSoftware.Holochain.hApp.OurWorld/our_world/zomes/our_world_core/code/: .hcbuild  Cargo.toml
NextGenSoftware.Holochain.hApp.OurWorld/our_world/zomes/our_world_core/code/src/: lib.rs
NextGenSoftware.Holochain.hApp.OurWorld2/our_world/zomes/our_world_core/code/: Cargo.toml
NextGenSoftware.Holochain.hApp.OurWorld2/our_world/zomes/our_world_core/code/src/: lib.rs
NextGenSoftware.OASIS.STAR/DNATemplates/hAppDNATemplate/zomes/my_zome/code/: Cargo.toml
(+4022 files in other folders)
