[package]
name = "my_zome"
version = "0.1.0"
authors = ["hc-scaffold-framework"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
hdk = "=0.0.50-alpha4"
hdk_proc_macros = "=0.0.50-alpha4"
holochain_wasm_utils = "=0.0.50-alpha4"
holochain_json_derive = "0.0"
holochain_entry_utils = "=0.1.5" #Make sure you increment this version to match future hc releases or you will get a version conflict with hc core types!

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
